samples/_failures_safe/1761510825_e00cb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82a36032.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_82a36032.c:183:39: error: expected ‘)’ at end of input
  183 |             if (graph->edges[i].source
      |                ~                      ^
      |                                       )
./samples/SAFE/__tmp_82a36032.c:183:13: error: expected declaration or statement at end of input
  183 |             if (graph->edges[i].source
      |             ^~
./samples/SAFE/__tmp_82a36032.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_82a36032.c:183:13: error: expected declaration or statement at end of input
